Allow selecting task due date
